fix content shift on adding border in map builder

--- a/src/app/uprising/map-builder/map-builder.component.scss
+++ b/src/app/uprising/map-builder/map-builder.component.scss
@@ -86,5 +86,7 @@
 }
 
 .selected {
-  border: 2px solid #0b6e75;;
+  // Using an outline instead of a border to avoid affecting the layout when an element is selected
+  outline: 2px solid #0b6e75;
+  outline-offset: -2px; /* Pulls the outline inside the border edge */
 }
